# hydrated_sloth

./: Cargo.toml  LICENSE  flake.nix
.github/workflows/: rust.yml
src/: main.rs  state.rs
src/cli/: mod.rs
src/gui/: calendar.rs  day_square.rs  mod.rs
