[package]
name = "hydrated_sloth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
druid = { version = "0.8.3", features = ["chrono", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.9.0", features = ["chrono", "chrono_0_4"] }
dirs = "5.0.1"

